# memory-sanitization

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  repository-spec.md  rust-toolchain.toml
.github/workflows/: foundation-integrity.yml
.pose/calibration/: dev-small-20260322T084233Z.json  dev-small-20260322T084248Z.json  dev-small-20260322T084249Z.json  dev-small-20260322T085356Z.json  dev-small-20260322T085550Z.json  dev-small-20260322T085612Z.json  dev-small-20260322T085614Z.json  dev-small-20260322T085814Z.json  dev-small-20260322T085818Z.json  dev-small-20260322T085819Z.json  dev-small-20260322T085848Z.json  dev-small-20260322T085926Z.json  dev-small-20260322T085927Z.json  dev-small-20260322T090048Z.json  dev-small-20260322T090101Z.json  dev-small-20260322T090103Z.json  dev-small-20260322T090107Z.json  dev-small-20260322T090233Z.json  dev-small-20260322T091039Z.json  dev-small-20260322T091056Z.json  dev-small-20260322T091138Z.json  dev-small-20260322T091237Z.json  dev-small-20260322T091321Z.json  dev-small-20260322T091444Z.json  dev-small-20260322T093410Z.json  dev-small-20260322T093537Z.json  dev-small-20260322T093704Z.json  dev-small-20260322T093719Z.json  dev-small-20260322T094143Z.json  dev-small-20260322T094156Z.json  dev-small-20260322T094157Z.json  dev-small-20260322T094223Z.json  dev-small-20260322T094452Z.json  dev-small-20260322T094456Z.json  dev-small-20260322T101358Z.json  dev-small-20260322T101413Z.json  dev-small-20260322T101429Z.json  dev-small-20260322T101640Z.json  dev-small-20260322T101911Z.json  dev-small-20260322T102051Z.json  (+25 more)
.tmp/: host-256k.yaml  host-512k.yaml
bench_profiles/: dev-small.yaml  eight-h100-hbm-max.yaml  eight-h100-hybrid-max.yaml  single-h100-hbm-max.yaml  single-h100-hbm-small.yaml  single-h100-host-max.yaml  single-h100-hybrid-max.yaml  single-h100-hybrid-small.yaml
docs/: .minimal-profile-performance-report.md.swp  architecture.md  benchmarking.md  graph-construction.md  migration-checklist.md  milestones.md  minimal-profile-performance-report.md  pose-db-spec.md  protocol.md  repository-spec.md  result-schema.md  security-model.md  serialization.md  threat-model.md  upstream-sync.md
docs/hardware/: eight-h100.md  single-h100.md
docs/performance/: optimization-log.md  optimization-roadmap.md
native/pose_native_label_engine/: Cargo.toml  build.rs
native/pose_native_label_engine/src/: blake3_internal2_batch.c  hbm_inplace.cu  lib.rs
rust/pose_filecoin_bridge/: Cargo.toml
rust/pose_filecoin_bridge/src/: lib.rs
rust/pose_test_hooks/: Cargo.toml
scripts/: build_bridge.py  build_native_label_engine.sh  check_banned_shortcuts.py  check_upstream_integrity.py  gen_test_vectors.py  perf_summary_table.sh  profile_scratch_breakdown.py  run_lab_matrix.sh  run_upstream_rust_tests.py  sync_upstream.py  sync_upstream.sh
src/pose/: __init__.py
tests/adversarial/: test_gpu_phase2.py  test_hbm_shadow_attacks.py  test_host_fast_phase_attacks.py  test_host_phase1.py  test_memory_accounting.py  test_result_validation.py
tests/e2e/: test_profile_loading.py  test_real_filecoin_bridge.py
tests/hardware/: test_hardware_scaffold.py  test_single_h100_hbm_profile.py
tests/integration/: test_cli_smoke.py
tests/parity/: __init__.py  generated_vectors.json  test_accelerated_labeling.py  test_mirror_scaffolding.py  test_native_labeling.py  test_reference_only_mode.py
tests/performance/: test_benchmark_reporting.py  test_timing_tracker.py
tests/unit/: test_banned_shortcut_scan.py  test_benchmark_harness.py  test_calibration.py  test_gpu_lease.py  test_gpu_planning.py  test_grpc_pose_db_runtime.py  test_host_session.py  test_host_worker.py  test_merkle_and_leasing.py  test_native_hbm_microbench.py  test_outer_verification.py  test_paper_conformance.py  test_phase1_spec_guards.py  test_porep_unit_serialization.py  test_pose_graphs.py  test_pose_hashing.py  test_protocol_messages_pose_db.py  test_rechallenge.py  test_repository_layout.py  test_result_schema.py  test_sandbox.py  test_session_store.py  test_slot_planning.py  test_soundness.py  test_upstream_integrity.py  test_upstream_rust_testing.py  (+1 more)
(+177 files in other folders)
