[workspace]
members = [
  "rust/pose_test_hooks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Repository-License-Pending"
authors = ["Repository maintainers"]

[workspace.metadata.pose]
status = "foundation"
description = "Workspace scaffold for the future Filecoin Rust bridge and test hooks."
