[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pose-pose-db"
version = "0.1.0"
description = "Python-first PoSE-DB over host memory and GPU HBM using graph-based secure-erasure sessions."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Repository maintainers"},
]
dependencies = [
  "blake3==1.0.8",
  "cbor2==5.6.5",
  "grpcio==1.71.0",
  "protobuf==5.29.4",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "grpcio-tools==1.71.0",
  "maturin==1.12.6",
  "pytest==8.3.5",
  "ruff==0.11.0",
]

[project.scripts]
pose = "pose.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pose"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]
