[package]
name = "pose_native_label_engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "pose_native_label_engine"
crate-type = ["cdylib"]

[dependencies]
blake3 = "1.8.2"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
sha3 = "0.10.8"
zeroize = "1.8.2"

[build-dependencies]
cc = "1.2.41"
