[package]
name = "pose_filecoin_bridge"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Repository-License-Pending"
authors = ["Repository maintainers"]

[lib]
name = "pose_filecoin_bridge"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
anyhow = "1.0.100"
hex = "0.4.3"
pyo3 = { version = "0.23.4", features = ["abi3-py312", "extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
storage-proofs-core = { path = "../../vendor/rust-fil-proofs/storage-proofs-core", default-features = false }
tempfile = "3.23.0"
filecoin-proofs = { path = "../../vendor/rust-fil-proofs/filecoin-proofs", default-features = false }
