[package]
name = "pose_filecoin_bridge"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Repository-License-Pending"
authors = ["Repository maintainers"]

[lib]
name = "pose_filecoin_bridge"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]

[features]
default = ["opencl"]
cpu = []
opencl = ["storage-proofs-core/opencl", "filecoin-proofs/opencl"]
cuda = ["storage-proofs-core/cuda", "filecoin-proofs/cuda"]
cuda-opencl = ["cuda", "opencl"]

[dependencies]
anyhow = "1.0.100"
hex = "0.4.3"
log = "0.4.28"
pyo3 = { version = "0.23.4", features = ["abi3-py312", "extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
storage-proofs-core = { path = "../../vendor/rust-fil-proofs/storage-proofs-core", default-features = false }
tempfile = "3.23.0"
filecoin-proofs = { path = "../../vendor/rust-fil-proofs/filecoin-proofs", default-features = false }
